--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -198,6 +198,31 @@
             font-size: 0.9em;
             /* Reducir el tamaño de la fuente */
         }
+		
+		.spinner-container {
+			    position: fixed;
+			    top: 0; left: 0;
+			    width: 100%; height: 100%;
+			    background: rgba(255, 255, 255, 0.5);
+			    z-index: 9999;
+			    display: flex;
+			    align-items: center;
+			    justify-content: center;
+			  }
+			
+			  .spinner {
+			    border: 5px solid #f3f3f3;
+			    border-top: 5px solid #3498db;
+			    border-radius: 50%;
+			    width: 50px;
+			    height: 50px;
+			    animation: spin 1s linear infinite;
+			  }
+			
+			  @keyframes spin {
+			    0% { transform: rotate(0deg); }
+			    100% { transform: rotate(360deg); }
+			  }
     </style>
 
     <script>
@@ -1000,7 +1025,10 @@
         </div>
     </div>
     </div>
-
+	
+	<div ng-show="loading" class="spinner-container">
+	  <div class="spinner"></div>
+	</div>
 </body>
 
 
